# hashapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml
apache/: vhost.conf
app/: README.md  main.py  pyproject.toml
app/api_v1/: api.py  hashstore.py
app/ui/: index.html
